--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -53,5 +53,13 @@
   .plate-region-section {
     width: 40px;
     height: 100%;
+    display: flex;
+    padding: 2px;
+    flex-direction: column;
+    justify-content: space-between;
+
+    img{
+      max-width: 100%;
+    }
   }
 }
